[package]
name = "floppabot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.9.0", features = ["bot-poise"] }
tracing = "0.1.37"
# urlencoding = "2.1.2"
reqwest = "0.11.14"
# reqwest-eventsource = "0.4.0"
poise = "0.5.2"
serde = "1.0.152"
serde_json = "1.0.91"