[package]
name = "floppabot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["bot-poise"] }
tracing = "0.1.37"
# urlencoding = "2.1.2"
ureq = { version = "2.6.2", features = ["json"] }
poise = "0.5.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"